--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,17 +1,24 @@
 name: Cypress Tests
 
-on: [push]
+on:
+  push:
+    branches:
+      - main  
 
 jobs:
   cypress-run:
     runs-on: ubuntu-latest
-steps: 
-    - uses: actions/checkout@v3
-    - name: Setup Node
-    uses: actions/setup-node@v3
-    with:
-        node-version: "14"
-        - name: Install Dependencies
+    steps:
+      - name: Sprawdź kod
+        uses: actions/checkout@v3
+      
+      - name: Konfiguracja Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: "14"
+      
+      - name: Zainstaluj zależności
         run: npm ci
-        - name: Run Cypress Tests
+      
+      - name: Uruchom testy Cypress
         uses: cypress-io/github-action@v3
